Adding support for all Liquid constructs in the Lexer.